# nsf_research_awards

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: main.yaml
config/model/: model.yaml
config/process/: preprocessing.yaml
models/: model_topic_1.0.0  model_topic_1.0.0.expElogbeta.npy  model_topic_1.0.0.id2word  model_topic_1.0.0.state
notebooks/: analysis.ipynb
src/: main.py  model.py  processing.py
src/mlruns/0/: meta.yaml
src/mlruns/183070468331774939/: meta.yaml
src/mlruns/183070468331774939/6376bdeb4bda4c17a310a952bf832f29/: meta.yaml
src/mlruns/183070468331774939/6376bdeb4bda4c17a310a952bf832f29/metrics/: coherence_score
src/mlruns/183070468331774939/6376bdeb4bda4c17a310a952bf832f29/tags/: mlflow.runName  mlflow.source.git.commit
src/mlruns/727385974422701194/: meta.yaml
src/mlruns/727385974422701194/e32a568683b843da98240f0c2f2e5f57/: meta.yaml
src/mlruns/727385974422701194/e32a568683b843da98240f0c2f2e5f57/artifacts/: model_topic_1.0.0
src/mlruns/727385974422701194/e32a568683b843da98240f0c2f2e5f57/metrics/: coherence_score
src/mlruns/727385974422701194/e32a568683b843da98240f0c2f2e5f57/tags/: mlflow.runName  mlflow.source.git.commit
